// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Audit/ValiderAudit Audit Labellisation 1`] = `
<div
  data-test="ValiderAuditModal"
>
  <h4>
    Valider l'audit
  </h4>
  <p>
    Pour clôturer l’audit, merci de joindre votre rapport définitif (disponible dans la bibliothèque de documents et visible par les membres de la communauté).
  </p>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    className="fr-btn fr-btn--sm fr-btn--secondary fr-mb-2w"
    data-test="AddRapportButton"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onPointerDown={[Function]}
  >
    Ajouter le rapport d'audit
  </button>
  <p
    className="fr-mt-2w"
  >
    Suite à cette validation, plus aucune modification ne sera possible dans le cadre de l’audit et le secrétariat de la Commission nationale du label (CNL) sera notifié pour réceptionner le dossier de candidature complet et le transmettre aux membres de la CNL.
  </p>
  <div
    className="flex"
  >
    <button
      className="fr-btn fr-btn--sm fr-mr-2w"
      data-test="validate"
      disabled={true}
      onClick={[Function]}
    >
      Valider l'audit
    </button>
    <button
      className="fr-btn fr-btn--sm fr-btn--secondary"
      onClick={[Function]}
    >
      Annuler
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ValiderAudit Audit Sans Labellisation 1`] = `
<div
  data-test="ValiderAuditModal"
>
  <h4>
    Valider l'audit
  </h4>
  <p>
    Pour clôturer l’audit, merci de joindre votre rapport définitif (disponible dans la bibliothèque de documents et visible par les membres de la communauté).
  </p>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    className="fr-btn fr-btn--sm fr-btn--secondary fr-mb-2w"
    data-test="AddRapportButton"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onPointerDown={[Function]}
  >
    Ajouter le rapport d'audit
  </button>
  <p
    className="fr-mt-2w"
  >
    Suite à cette validation, et après vérification par l'équipe Territoires en Transitions, un nouveau cycle va démarrer avec le score validé par l'audit.
  </p>
  <div
    className="flex"
  >
    <button
      className="fr-btn fr-btn--sm fr-mr-2w"
      data-test="validate"
      disabled={true}
      onClick={[Function]}
    >
      Valider l'audit
    </button>
    <button
      className="fr-btn fr-btn--sm fr-btn--secondary"
      onClick={[Function]}
    >
      Annuler
    </button>
  </div>
</div>
`;
